--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,12 +10,84 @@ html {
 }
 
 img {
+  display: block;
   height: auto;
   max-width: 100%;
 }
 
 a {
   text-decoration: none;
+}
+
+::selection {
+  background-color: #F8F8F8;
+}
+
+body {
+  display: grid;
+  grid-template-columns: minmax(300px, 700px) minmax(400px, 1fr);
+}
+
+.main-content {
+  grid-column: 1/2;
+  height: 100vh;
+  background-color: #4E5BEE;
+}
+
+.logo {
+  width: 25rem;
+  margin: 25rem auto 0 auto;
+}
+
+.formulario {
+  width: 30rem;
+  margin: 10rem auto 0 auto;
+}
+.formulario input {
+  width: 100%;
+  outline: none;
+  padding: 1rem;
+  color: #F8F8F8;
+  text-indent: 35px;
+  font-weight: bold;
+  font-size: 1.6rem;
+  border-radius: 20px;
+  border: 2px solid #F8F8F8;
+  background-color: transparent;
+}
+.formulario input[type=email] {
+  background-repeat: no-repeat;
+  background-position: left 10px center;
+  background-image: url(../img/email-img.svg);
+}
+.formulario input[type=password] {
+  background-repeat: no-repeat;
+  background-position: left 10px center;
+  background-image: url(../img/password-img.svg);
+}
+.formulario button {
+  width: 100%;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin-top: 0.5rem;
+  text-align: center;
+  border-radius: 20px;
+  font-family: inherit;
+  background-color: #F8F8F8;
+}
+.formulario div {
+  margin-bottom: 1.5rem;
+}
+.formulario p {
+  position: relative;
+  left: 15px;
+  top: 2px;
+  color: #F8F8F8;
+  text-align: left;
+  font-size: 1.5rem;
 }
 
 /*# sourceMappingURL=main.css.map */
