--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @import 'reset';
 @import 'variaveis';
+@import 'mixins';
 
 ::selection {
   background-color: $cinza;
@@ -7,7 +8,11 @@
 
 body {
   display: grid;
-  grid-template-columns: minmax(320px, 700px) minmax(400px, 1fr);
+  grid-template-columns: minmax(320px, 600px) minmax(400px ,1250px);
+
+  @include media(768px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .main-content {
@@ -79,5 +84,20 @@ body {
     color: $cinza;
     text-align: left;
     font-size: 1.5rem;
+  }
+}
+
+.hero-img {
+  grid-column: 2 / 3;
+  padding: 0 1rem 0 1rem;
+
+  @include media(768px) {
+    & {
+      display: none;
+    }
+  }
+
+  img {
+    height: 100vh;
   }
 }
