--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,12 @@ a {
 
 body {
   display: grid;
-  grid-template-columns: minmax(320px, 700px) minmax(400px, 1fr);
+  grid-template-columns: minmax(320px, 600px) minmax(400px, 1250px);
+}
+@media (max-width: 768px) {
+  body {
+    grid-template-columns: 1fr;
+  }
 }
 
 .main-content {
@@ -91,6 +96,19 @@ body {
   color: #F8F8F8;
   text-align: left;
   font-size: 1.5rem;
+}
+
+.hero-img {
+  grid-column: 2/3;
+  padding: 0 1rem 0 1rem;
+}
+@media (max-width: 768px) {
+  .hero-img {
+    display: none;
+  }
+}
+.hero-img img {
+  height: 100vh;
 }
 
 /*# sourceMappingURL=main.css.map */
